# arrow-wasm

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  index.html  package.json  typedoc.json
.github/: dependabot.yml
.github/workflows/: test.yml
assets/: highlight.css  navigation.js  search.js
classes/: bundler_arrow1.FFIRecordBatch.html  bundler_arrow1.FFITable.html  bundler_arrow1.RecordBatch.html  bundler_arrow1.Schema.html  bundler_arrow1.Table.html  bundler_arrow2.DataType.html  bundler_arrow2.FFIRecordBatch.html  bundler_arrow2.FFITable.html  bundler_arrow2.FFIVector.html  bundler_arrow2.RecordBatch.html  bundler_arrow2.Schema.html  bundler_arrow2.Table.html  bundler_arrow2.Vector.html  esm_arrow1.FFIRecordBatch.html  esm_arrow1.FFITable.html  esm_arrow1.RecordBatch.html  esm_arrow1.Schema.html  esm_arrow1.Table.html  esm_arrow2.DataType.html  esm_arrow2.FFIRecordBatch.html  esm_arrow2.FFITable.html  esm_arrow2.FFIVector.html  esm_arrow2.RecordBatch.html  esm_arrow2.Schema.html  esm_arrow2.Table.html  esm_arrow2.Vector.html  node_arrow1.FFIRecordBatch.html  node_arrow1.FFITable.html  node_arrow1.RecordBatch.html  node_arrow1.Schema.html  node_arrow1.Table.html  node_arrow2.DataType.html  node_arrow2.FFIRecordBatch.html  node_arrow2.FFITable.html  node_arrow2.FFIVector.html  node_arrow2.RecordBatch.html  node_arrow2.Schema.html  node_arrow2.Table.html  node_arrow2.Vector.html
example/: Cargo.toml
example/src/: lib.rs
functions/: bundler_arrow1._functionTable.html  bundler_arrow1.setPanicHook.html  bundler_arrow1.wasmMemory.html  bundler_arrow2._functionTable.html  bundler_arrow2.setPanicHook.html  bundler_arrow2.wasmMemory.html  esm_arrow1._functionTable.html  esm_arrow1.default.html  esm_arrow1.initSync.html  esm_arrow1.setPanicHook.html  esm_arrow1.wasmMemory.html  esm_arrow2._functionTable.html  esm_arrow2.default.html  esm_arrow2.initSync.html  esm_arrow2.setPanicHook.html  esm_arrow2.wasmMemory.html  node_arrow1._functionTable.html  node_arrow1.setPanicHook.html  node_arrow1.wasmMemory.html  node_arrow2._functionTable.html  node_arrow2.setPanicHook.html  node_arrow2.wasmMemory.html
interfaces/: esm_arrow1.InitOutput.html  esm_arrow2.InitOutput.html
modules/: bundler_arrow1.html  bundler_arrow2.html  esm_arrow1.html  esm_arrow2.html  node_arrow1.html  node_arrow2.html
scripts/: build.sh
src/: _ffi.rs  data.rs  datatype.rs  error.rs  ffi.rs  field.rs  lib.rs  record_batch.rs  schema.rs  table.rs  utils.rs  vector.rs
src/arrow1/: error.rs  ffi.rs  field.rs  mod.rs  record_batch.rs  schema.rs  table.rs
src/arrow1/arrow_js/: data.rs  enum.rs  field.rs  mod.rs  record_batch.rs  schema.rs  table.rs  type.rs
src/arrow1/data/: mod.rs  typed_array.rs
src/arrow1/vector/: mod.rs
src/arrow2/: datatype.rs  error.rs  mod.rs  record_batch.rs  schema.rs  table.rs
src/arrow2/vector/: ffi.rs  mod.rs  untyped.rs
src/arrow_js/: data.rs  enum.rs  field.rs  record_batch.rs  schema.rs  table.rs  type.rs
src/data/: mod.rs  typed_array.rs
src/datatype/: mod.rs
src/ffi/: array.rs  chunked.rs  data.rs  mod.rs  record_batch.rs  schema.rs  stream.rs  table.rs  vector.rs
src/vector/: mod.rs
tests/: arrow_helpers.cjs
types/: esm_arrow1.InitInput.html  esm_arrow1.SyncInitInput.html  esm_arrow2.InitInput.html  esm_arrow2.SyncInitInput.html
