[package]
name = "arrow-wasm"
version = "0.1.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
description = "Core library for using Apache Arrow in Rust wasm-bindgen modules."
readme = "README.md"
repository = "https://github.com/kylebarron/parquet-wasm"
license = "MIT OR Apache-2.0"
keywords = ["webassembly", "arrow"]
categories = ["wasm"]
rust-version = "1.62"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
arrow1 = ["dep:arrow", "dep:arrow-schema"]
arrow2 = ["dep:arrow2"]
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
# if wee_alloc only saves 10KB, might not be worth the slower allocation speed?
# wee_alloc = "0.4.5"

js-sys = "0.3.66"
getrandom = { version = "0.2.11", features = ["js"] }
thiserror = "1.0"

arrow2 = { version = "0.18", optional = true, features = [
  "io_ipc",
] }

arrow-schema = { version = "49", optional = true }
arrow = { version = "49", default-features = false, optional = true, features = [
  "ffi",
  "ipc",
] }

serde-wasm-bindgen = { version = "0.6.3" }

wasm-bindgen-futures = { version = "0.4.39", optional = true }

[dependencies.web-sys]
version = "0.3.66"
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  "Document",
  "Element",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
# Tell `rustc` to optimize for small code size.
# As of 3/15/22, opt-level = s was smallest
# https://github.com/kylebarron/parquet-wasm/pull/48
opt-level = "s"
lto = true
